fixing Internet Exploder navbar on small screens

--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -43,3 +43,9 @@ $navbar-accent-color: #e6e3c9;
     }
   }
 }
+
+@media (max-width: 768px) {
+  .navbar-default .container .navbar-nav > li a {
+    padding-top: 30px;
+  }
+}
